<resources>
    <string name="app_name">ShoppingList</string>
        <string name="login_title">Login</string>
        <string name="email_hint">Email</string>
        <string name="password_hint">Password</string>
        <string name="login_button">Login</string>
        <string name="register_prompt">Dont have an account? Register here.</string>
        <string name="forgot_password">Forgot Password?</string>
        <string name="register_title">Register</string>
        <string name="register_button">Register</string>
        <string name="add_item_button">Add Item</string>

</resources>